--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -10,6 +10,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transform: translate(110%, 0);
+  transition: all 400ms ease;
 }
 
 .cart-items {
@@ -25,4 +27,8 @@
 
 .cart-items .cart-item:last-child {
   border-bottom: none;
+}
+
+.cart--active {
+  transform: translate(0, 0);
 }
